# gooddata-export

./: .env.gdcloud.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  USAGE_GUIDE.md  formatting_ruff.py  main.py  pyproject.toml  requirements.txt  setup.py  test_backward_compat.py
.claude/commands/: review.md
.github/: CODEOWNERS
.github/actions/setup_python/: action.yml
.github/workflows/: create_tag.yml  formatting_check_python.yml
gooddata_export/: __init__.py  cli.py  common.py  config.py  constants.py  db.py  export.py  post_export.py  process.py
gooddata_export/cli/: __init__.py  main.py  prompts.py
gooddata_export/export/: __init__.py  fetch.py  utils.py  writers.py
gooddata_export/process/: __init__.py  common.py  dashboard_traversal.py  entities.py  layout.py  rich_text.py
gooddata_export/sql/: DEPENDENCY_GRAPH.md  EXECUTION_ORDER.md  metrics_probable_duplicates.sql  post_export_config.yaml  visuals_with_same_content.sql
gooddata_export/sql/procedures/: v_api_automation_metrics.sql  v_api_automation_workspaces.sql  v_procedures_api_metrics.sql
gooddata_export/sql/tables/: metrics_ancestry.sql  metrics_references.sql  metrics_relationships.sql
gooddata_export/sql/updates/: dashboards_is_valid.sql  filter_contexts_usage_check.sql  filter_contexts_with_same_content.sql  metrics_is_valid.sql  metrics_probable_duplicates.sql  metrics_usage_check.sql  visualizations_is_valid.sql  visualizations_usage_check.sql  visuals_with_same_content.sql
gooddata_export/sql/views/: v_dashboard_tags.sql  v_dashboards_filters.sql  v_dashboards_plugins.sql  v_dashboards_tags.sql  v_dashboards_visualizations.sql  v_dashboards_widget_filters.sql  v_filter_context_usage.sql  v_filter_contexts_usage.sql  v_filter_contexts_validate_by.sql  v_ldm_columns.sql  v_ldm_columns_tags.sql  v_ldm_dataset_column_tag_check.sql  v_ldm_datasets_tags.sql  v_ldm_labels.sql  v_ldm_labels_tags.sql  v_metric_dependencies.sql  v_metric_tags.sql  v_metric_usage.sql  v_metrics_datasets_ancestry.sql  v_metrics_dependencies.sql  v_metrics_relationships.sql  v_metrics_relationships_ancestry.sql  v_metrics_relationships_root.sql  v_metrics_tags.sql  v_metrics_usage.sql  v_visualization_tags.sql  v_visualization_usage.sql  v_visualizations_filters.sql  v_visualizations_invalid_sorts.sql  v_visualizations_references.sql  v_visualizations_tags.sql  v_visualizations_usage.sql  view_metric_dependencies.sql  view_metric_usage.sql  view_visualization_usage.sql
scripts/: create_tag.py
tests/: conftest.py  test_cli_prompts.py  test_common.py  test_config.py  test_entity_transform.py  test_export_utils.py  test_fetch.py  test_local_mode.py  test_metrics_references.py  test_post_export.py  test_process_common.py  test_sql_validation.py
tests/fixtures/: sample_layout.json
