[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gooddata-export"
version = "1.5.2"
description = "Export GoodData workspace metadata to SQLite and CSV"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vlastimil Vondra"}
]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=7.0.0",
]

[project.scripts]
gooddata-export = "gooddata_export.cli:main"

[project.urls]
Repository = "https://github.com/vondravl/gooddata-export"

[tool.setuptools.packages.find]
where = ["."]
include = ["gooddata_export*"]

[tool.setuptools.package-data]
gooddata_export = [
    "sql/*.yaml",
    "sql/*.md",
    "sql/tables/*.sql",
    "sql/views/*.sql",
    "sql/updates/*.sql",
    "sql/procedures/*.sql",
]

[tool.ruff]
# Target Python 3.13+
target-version = "py313"

# Exclude directories
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

# Line length (default is 88, matching Black)
line-length = 88

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Use spaces for indentation
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Format docstrings
docstring-code-format = true

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default
select = ["E", "F", "W", "I"]

# Ignore line length for strings, comments, and docstrings
ignore = ["E501"]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
